<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/pic_iv"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/contact_default_png" />


            <TextView
                android:id="@+id/name_et"
                style="@style/DataText"
                android:layout_below="@id/name_tv"
                android:inputType="textPersonName"
                android:textSize="36dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/phone_tv"
                style="@style/LabelTextView"
                android:layout_below="@id/name_et"

                android:text="@string/tv_phone" />

            <TextView
                android:id="@+id/phone_et"
                style="@style/DataText"
                android:layout_below="@id/phone_tv"
                android:inputType="phone" />

            <TextView
                android:id="@+id/mail_tv"
                style="@style/LabelTextView"
                android:layout_below="@id/top"
                android:layout_marginTop="10dp"
                android:text="@string/tv_email" />

            <TextView
                android:id="@+id/mail_et"
                style="@style/DataText"
                android:layout_below="@id/mail_tv"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/site_tv"
                style="@style/LabelTextView"
                android:layout_below="@id/mail_et"
                android:layout_marginTop="10dp"
                android:text="@string/tv_website" />

            <TextView
                android:id="@+id/site_et"
                style="@style/DataText"
                android:layout_below="@id/site_tv"
                android:inputType="textUri" />

            <TextView
                android:id="@+id/address_tv"
                style="@style/LabelTextView"
                android:layout_below="@id/site_et"
                android:layout_marginTop="10dp"
                android:text="@string/tv_address" />

            <TextView
                android:id="@+id/address_et"
                style="@style/DataText"
                android:layout_below="@id/address_tv"
                android:inputType="textPostalAddress" />

            <TextView
                android:id="@+id/date_tv"
                style="@style/LabelTextView"
                android:layout_below="@id/address_et"
                android:layout_marginTop="10dp"
                android:text="@string/tv_pick_date" />

            <TextView
                android:id="@+id/value_date_tv"
                style="@style/DataText"
                android:layout_below="@id/date_tv" />


            <TextView
                android:id="@+id/time_tv"
                style="@style/LabelTextView"
                android:layout_below="@id/date_btn"
                android:layout_marginTop="10dp"
                android:text="@string/tv_time" />

            <TextView
                android:id="@+id/value_time_tv"
                style="@style/DataText"
                android:layout_below="@id/time_tv" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>