<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_cancel" />

        <ImageButton
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_save_black" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


                <RelativeLayout
                    android:id="@+id/image_frame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">
                    <ImageView
                        android:id="@+id/pic_iv"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/contact_default_png"
                        />
                    <ImageButton
                        android:id="@+id/camera_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_photo_camera"
                        android:layout_alignStart="@id/pic_iv"
                        android:layout_alignBottom="@id/pic_iv"
                        android:background="@drawable/button_trans"
                        android:layout_margin="4dp"
                        android:rotation="10"
                        android:padding="2dp"
                        />

                    <ImageButton
                        android:id="@+id/delete_pic_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_delete"
                        android:layout_alignEnd="@id/pic_iv"
                        android:layout_alignBottom="@id/pic_iv"
                        android:background="@drawable/button_trans"
                        android:layout_margin="4dp"
                        android:rotation="-10"
                        android:padding="2dp"/>
                </RelativeLayout>

            <TextView
                android:id="@+id/name_tv"
                style="@style/LabelTextView"
                android:text="@string/tv_name" />

            <EditText
                android:id="@+id/name_et"
                style="@style/DataText"
                android:layout_below="@id/name_tv"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/phone_tv"
                style="@style/LabelTextView"
                android:layout_below="@id/name_et"

                android:text="@string/tv_phone" />

            <EditText
                android:id="@+id/phone_et"
                style="@style/DataText"
                android:layout_below="@id/phone_tv"
                android:inputType="phone" />

            <TextView
                android:id="@+id/mail_tv"
                style="@style/LabelTextView"
                android:layout_marginTop="10dp"
                android:text="@string/tv_email" />

            <EditText
                android:id="@+id/mail_et"
                style="@style/DataText"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/site_tv"
                style="@style/LabelTextView"
                android:layout_marginTop="10dp"
                android:text="@string/tv_website" />

            <EditText
                android:id="@+id/site_et"
                style="@style/DataText"
                android:inputType="textUri" />

            <TextView
                android:id="@+id/address_tv"
                style="@style/LabelTextView"
                android:layout_marginTop="10dp"
                android:text="@string/tv_address" />

            <EditText
                android:id="@+id/address_et"
                style="@style/DataText"
                android:inputType="textPostalAddress" />

            <TextView
                android:id="@+id/date_tv"
                style="@style/LabelTextView"
                android:layout_marginTop="10dp"
                android:text="@string/tv_pick_date" />

            <TextView
                android:id="@+id/value_date_tv"
                style="@style/DataText" />

            <ImageButton
                android:id="@+id/date_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_date_range" />

            <TextView
                android:id="@+id/time_tv"
                style="@style/LabelTextView"
                android:layout_marginTop="10dp"
                android:text="@string/tv_time" />

            <TextView
                android:id="@+id/value_time_tv"
                style="@style/DataText" />

            <ImageButton
                android:id="@+id/time_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_access_time" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>